--- a/electrico.html
+++ b/electrico.html
@@ -40,64 +40,204 @@
     </script>
   </head>
   <body>
-    <div class="hero">
+    <div>
       <nav id="menu">
         <div class="nav-container">
            <div class="menu-bars">
              <i class="fa fa-bars"></i>
            </div>
           <div class="brand">
-            <a href="#">
+            <a href="last_index.html">
               <img src="img/logo_Hacis.png" alt="Logo Hacis">
             </a>
           </div> 
           <ul class="top-menu">
-            <li><a href="#">Inicio</a></li>
-            <li><a href="#seccionNosotros">Nosotros</a></li>
-            <li class="dropdown"><a href="#Servicios">Servicios</a>
+            <li><a href="last_index.html">Inicio</a></li>
+            <li><a href="last_index.html#seccionNosotros">Nosotros</a></li>
+            <li class="dropdown"><a href="last_index.html#Servicios">Servicios</a>
               <div class="dropdown-content">
-                <a href="#">Eléctrico</a>
-                <a href="#">Metálico</a>
-                <a href="#">Renovables</a>
+                <a href="electrico.html">Eléctrico</a>
+                <a href="metalico.html">Metálico</a>
+                <a href="renovable.html">Renovables</a>
               </div>
             </li>
-            <li><a href="#Clientes">Clientes</a></li>
-            <li><a href="#Contacto">Contáctanos</a></li>
+            <li><a href="last_index.html#Clientes">Clientes</a></li>
+            <li><a href="last_index.html#Contacto">Contáctanos</a></li>
           </ul>
         </div>
       </nav>
 
-    <section id="seccionServicios">
+    <section id="seccionLista">
       <div class="container">
-        <h3>Servicios</h3>
+        <h2>Servicios Eléctricos</h2>
+        <p><b>ARGE</b> es una empresa que brinda servicios de fabricación, diseño, montaje y reparación de 
+          estructuras, dándole al cliente una identidad mediante la expresión visual</p>
+        <br>
+
+        <h3>Asesorías y Consultorías</h3>
         <ul class="lista-servicios">
           <li class="item-servicios"> 
-            <p> <i class="fa fa-cubes"></i> Diseñamos ,elaboramos proyectos e implementamos sistemas de utilización eléctrica.</p>
-            <p> <i class="fa fa-cubes"></i> Montaje de Subestaciones eléctricas.</p>
+            <p> <i class="fa fa-cubes"></i> Estudio de rechazo de cargas.</p>
+            <p> <i class="fa fa-cubes"></i> Contratos de Suministros de Electricidad.</p>
           </li>
           <li class="item-servicios">
-            <p> <i class="fa fa-cubes"></i> Mantenimientos de equipos eléctricos e instalaciones.</p>
-            <p> <i class="fa fa-cubes"></i> Consultoría, asesoramiento en eficiencia energética.</p>
+            <p> <i class="fa fa-cubes"></i> Contratos de Usuarios Libres.</p>
+            <p> <i class="fa fa-cubes"></i> Estudios de eficiencia energética.</p>
           </li>
           <li class="item-servicios">
-            <p> <i class="fa fa-cubes"></i> Estudios de pre-inversión en el marco SNIP.</p>    
-            <p> <i class="fa fa-cubes"></i> Elaboración de proyectos para el sector público y privado.</p>
+            <p> <i class="fa fa-cubes"></i> Estudios tarifarios.</p>    
+            <p> <i class="fa fa-cubes"></i> Asesorías para Planes de Transmisión para Empresas de Generación y   Distribución.</p>
           </li>
-          <li class="item-servicios"> 
-            <p> <i class="fa fa-cubes"></i> Proyecto de líneas de trasmisión, distribución y subestaciones.</p>
-            <p> <i class="fa fa-cubes"></i> Proyectos  y obras Civiles.</p>
+          <li class="item-servicios">
+            <p> <i class="fa fa-cubes"></i> Revisión de compensaciones aplicadas por OSINERGMIN.</p>    
+            <p> <i class="fa fa-cubes"></i> Estudio de protecciones eléctricas.</p>
           </li>
+          <li class="item-servicios">
+            <p> <i class="fa fa-cubes"></i> Proyectos Eléctricos para Sistemas de Utilización y Distribución.</p>    
+            <p> <i class="fa fa-cubes"></i> Proyectos Instalaciones eléctricas para fábricas y edificios.</p>
+          </li>
+          <li class="item-servicios">
+            <p> <i class="fa fa-cubes"></i> Proyectos eléctricos para habilitaciones urbanas (Gestión Integral).</p>    
+            <p> <i class="fa fa-cubes"></i> Estudios de Iluminación.</p>
+          </li>
+        </ul>
+
+        <h3>Servicios Técnicos</h3>
+        <ul class="lista-servicios">
           <li class="item-servicios"> 
-            <p> <i class="fa fa-cubes"></i> Supervisión de obras eléctricas y civiles.</p>
-            <p> <i class="fa fa-cubes"></i> Alquiler de máquinas, vehículos, maquinaria pesada.</p>
+            <p> <i class="fa fa-cubes"></i> Mantenimiento de Subestaciones Eléctricas.</p>
+            <p> <i class="fa fa-cubes"></i> Mantenimiento instalaciones eléctricas y redes en baja y media tensión.</p>
+          </li>
+          <li class="item-servicios">
+            <p> <i class="fa fa-cubes"></i> Instalaciones eléctricas para edificios(Proyectos y Obras).</p>
+            <p> <i class="fa fa-cubes"></i> Mantenimiento de grupos electrógenos.</p>
+          </li>
+          <li class="item-servicios">
+            <p> <i class="fa fa-cubes"></i> Mantenimiento en iluminación y cambio de equipos a LED.</p>
+            <p> <i class="fa fa-cubes"></i> Revisión de fallas a tierra.</p>
+          </li>
+          <li class="item-servicios">
+            <p> <i class="fa fa-cubes"></i> Supervisión de obras eléctricas.</p>    
+            <p> <i class="fa fa-cubes"></i> Modernización de sistemas de iluminación.</p>
+          </li>
+          <li class="item-servicios">
+            <p> <i class="fa fa-cubes"></i> Diseño, montaje e implementación de Subestaciones Eléctricas.</p>
+          </li>
+        </ul>
+
+        <h3>Obra</h3>
+        <ul class="lista-servicios">
+          <li class="item-servicios"> 
+            <p> <i class="fa fa-cubes"></i> Obras de redes de media y baja tensión.</p>
+            <p> <i class="fa fa-cubes"></i> Obras de Sistemas de Utilización (fábricas).</p>
+          </li>
+          <li class="item-servicios">
+            <p> <i class="fa fa-cubes"></i> Obras de Sistemas de Distribución (habilitaciones urbanas).</p>
+            <p> <i class="fa fa-cubes"></i> Montajes de Subestaciones Eléctricas.</p>
           </li>
         </ul>
       </div>
     </section>
 
+    <section id="Servicios">
+      <div class="mx-5">
+        <div class="galeria-proyectos">
+          <div class="proyectos-civiles">
+            <div class="item-lg civil-01">
+              <img src="img/construccion10.jpg" alt="Imagen proyectos civiles">
+              <div class="overlay">
+                 <div class="content">
+                    <h5>Proyectos Electricos</h5>
+                    <p>Elaboración de proyectos para el sector público y privado.</p>
+                 </div>
+              </div>
+            </div>
+            <div class="item-md civil-02">
+              <img src="img/grua.jpg" alt="Imagen proyectos civiles">
+              <div class="overlay">
+                 <div class="content">
+                    <h5>Proyectos Electricos</h5>
+                    <p>Alquiler de máquinas, vehículos, maquinaria pesada</p>
+                 </div>
+              </div>
+            </div>
+            <div class="item-md civil-03">
+              <img src="img/construccion.jpg"   alt="Imagen proyectos civiles">
+              <div class="overlay">
+                 <div class="content">
+                    <h5>Proyectos Electricos</h5>
+                    <p>Proyectos y obras Civiles</p>
+                 </div>
+              </div>
+            </div>
+          </div>
+          
+          <div class="proyectos-electricos">
+            <div class="item-md electr-01">
+              <img src="img/electrico-2jpg.jpg" alt="Imagen proyectos eléctricos">
+              <div class="overlay">
+                 <div class="content">
+                    <h5>Proyectos Eléctricos</h5>
+                    <p>Montaje de Subestaciones eléctricas</p>
+                 </div>
+              </div>
+            </div>
+            <div class="item-md electr-02">
+              <img src="img/electrico-4.jpg" alt="Imagen proyectos eléctricos">
+              <div class="overlay">
+                 <div class="content">
+                    <h5>Proyectos Eléctricos</h5>
+                    <p>Supervisión de obras eléctricas</p>
+                 </div>
+              </div>
+            </div>
+            <div class="item-lg electr-03">
+              <img src="img/electrico-1.jpg" alt="Imagen proyectos eléctricos">
+              <div class="overlay">
+                 <div class="content">
+                    <h5>Proyectos Eléctricos</h5>
+                    <p>Consultoría y asesoramiento en eficiencia energética</p>
+                 </div>
+              </div>
+            </div>
+          </div>
+          
+          <div class="proyectos-electricos">
+            <div class="item-md electr-01">
+              <img src="img/electrico-2jpg.jpg" alt="Imagen proyectos eléctricos">
+              <div class="overlay">
+                 <div class="content">
+                    <h5>Proyectos Eléctricos</h5>
+                    <p>Montaje de Subestaciones eléctricas</p>
+                 </div>
+              </div>
+            </div>
+            <div class="item-md electr-02">
+              <img src="img/electrico-4.jpg" alt="Imagen proyectos eléctricos">
+              <div class="overlay">
+                 <div class="content">
+                    <h5>Proyectos Eléctricos</h5>
+                    <p>Supervisión de obras eléctricas</p>
+                 </div>
+              </div>
+            </div>
+            <div class="item-lg electr-03">
+              <img src="img/electrico-1.jpg" alt="Imagen proyectos eléctricos">
+              <div class="overlay">
+                 <div class="content">
+                    <h5>Proyectos Eléctricos</h5>
+                    <p>Consultoría y asesoramiento en eficiencia energética</p>
+                 </div>
+              </div>
+            </div>
+          </div>
+        </div>  
+      </div>
+    </section>
+
     <section id="Contacto">
       <div class="container">
-        <h3>Contáctanos</h3>
+        <h3>Solicita tu servicio</h3>
         <div>
           <form method="post" id="register-form" novalidate="novalidate">
             <p class="item-form">
