--- a/metalico.html
+++ b/metalico.html
@@ -40,126 +40,173 @@
     </script>
   </head>
   <body>
-    <div class="hero">
+    <div>
       <nav id="menu">
         <div class="nav-container">
            <div class="menu-bars">
              <i class="fa fa-bars"></i>
            </div>
           <div class="brand">
-            <a href="#">
+            <a href="last_index.html">
               <img src="img/logo_Hacis.png" alt="Logo Hacis">
             </a>
           </div> 
           <ul class="top-menu">
-            <li><a href="#">Inicio</a></li>
-            <li><a href="#seccionNosotros">Nosotros</a></li>
-            <li class="dropdown"><a href="#Servicios">Servicios</a>
+            <li><a href="last_index.html">Inicio</a></li>
+            <li><a href="last_index.html#seccionNosotros">Nosotros</a></li>
+            <li class="dropdown"><a href="last_index.html#Servicios">Servicios</a>
               <div class="dropdown-content">
                 <a href="electrico.html">Eléctrico</a>
                 <a href="metalico.html">Metálico</a>
                 <a href="renovable.html">Renovables</a>
               </div>
             </li>
-            <li><a href="#Clientes">Clientes</a></li>
-            <li><a href="#Contacto">Contáctanos</a></li>
+            <li><a href="last_index.html#Clientes">Clientes</a></li>
+            <li><a href="last_index.html#Contacto">Contáctanos</a></li>
           </ul>
         </div>
       </nav>
-      <div class="hero-container">
-        <div class="logoHacis">
-          <h1>Hacis Proyectos - Constuctora y Consultora</h1>
-          <img src="img/hacis%20logo%20formal%201.png" alt="HACIS PROYECTOS">
-        </div>
-        <ul>
-          <li>
-            <a href="#" target="_blank" title="Facebook">
-              <i class="fa fa-facebook"></i>
-            </a>
+
+    <section id="seccionLista">
+      <div class="container">
+        <h2>Servicios Metálicos</h2>
+        <p><b>ARGE</b> es una empresa que brinda servicios de fabricación, diseño, montaje y reparación de 
+          estructuras, dándole al cliente una identidad mediante la expresión visual</p>
+        <br>
+
+        <h3>Estructuras Metálicas</h3>
+        <ul class="lista-servicios">
+          <li class="item-servicios"> 
+            <p> <i class="fa fa-cubes"></i> Fabricación de techos, con TR4, calaminon, polietileno, policarbonato, osb, drywall y madera.</p>
+            <p> <i class="fa fa-cubes"></i> Naves industriales.</p>
           </li>
-          <li>
-            <a href="#" target="_blank" title="Twitter">
-              <i class="fa fa-twitter"></i>
-            </a>
+          <li class="item-servicios">
+            <p> <i class="fa fa-cubes"></i> Cercos Perimétricos.</p>
+            <p> <i class="fa fa-cubes"></i> Estrados.</p>
+          </li>
+          <li class="item-servicios">
+            <p> <i class="fa fa-cubes"></i> Escaleras.</p>    
+            <p> <i class="fa fa-cubes"></i> Containers.</p>
           </li>
         </ul>
-      </div>
-    </div>
 
-
-    <section id="seccionNosotros">
-      <div class="container">
-        <div class="row">
-          <div class="col mx-2 px-4 text-center">
-            <!-- <i class="fa fa-paper-plane-o"></i> -->
-            <i class="fa fa-crosshairs"></i>
-            <h3>Misión</h3>
-            <hr>
-            <p>Brindar a nuestros clientes un servicio integral y de calidad a través de soluciones innovadoras, contribuyendo al desarrollo sostenible de la comunidad y cuidando el medio ambiente.</p>
-          </div>
-          <div class="col mx-2  px-4 text-center">
-            <i class="fa fa-eye"></i>
-            <h3>Visión</h3>
-            <hr>
-            <p>Ser una empresa líder del sur del Perú, suministrando bienes y servicios de calidad, alcanzando un reconocimiento en el sector.</p>
-          </div>
-        </div>
-        <div class="row mt-4">
-        <div class="col-4" ></div>
-        <div class="col-4 text-center">
-          <i class="fa fa-hand-o-up"></i>
-          <h3>Valores</h3>
-          <hr>
-          <div>
-            <p class="text-left valores">
-              <span><b>H</b>onestidad</b></span> <br>
-              <span><b>A</b>utoevaluación</span> <br>
-              <span><b>C</b>ompromiso</span> <br>
-              <span><b>I</b>ntegridad</span> <br>
-              <span><b>S</b>ostenibilidad</span>
-            </p>
-          </div>
-        </div>
-        <div class="col-4"></div>
-        </div> 
+        <h3>Estructuras Publicitarias</h3>
+        <h4>Outdoor</h4>
+        <ul class="lista-servicios">
+          <li class="item-servicios"> 
+            <p> <i class="fa fa-cubes"></i> Letreros.</p>
+            <p> <i class="fa fa-cubes"></i> Paneles.</p>
+          </li>
+          <li class="item-servicios">
+            <p> <i class="fa fa-cubes"></i> Vallas Publicitarias.</p>
+          </li>
+        </ul>
+        <h4>Implementaciones</h4>
+        <ul class="lista-servicios">
+          <li class="item-servicios"> 
+            <p> <i class="fa fa-cubes"></i> Oficinas.</p>
+            <p> <i class="fa fa-cubes"></i> Bares.</p>
+          </li>
+          <li class="item-servicios">
+            <p> <i class="fa fa-cubes"></i> Discotecas.</p>
+            <p> <i class="fa fa-cubes"></i> Islas.</p>
+          </li>
+          <li class="item-servicios">
+            <p> <i class="fa fa-cubes"></i> Restaurantes.</p>    
+            <p> <i class="fa fa-cubes"></i> Negocios.</p>
+          </li>
+        </ul>
+        <h4>Impresiones</h4>
       </div>
     </section>
 
     <section id="Servicios">
-      <div class="container">
-        <h2>Servicios</h2>
+      <div class="mx-5">
         <div class="galeria-proyectos">
           <div class="proyectos-civiles">
             <div class="item-lg civil-01">
-              <img src="img/electrico-2jpg.jpg" alt="Imagen proyectos electricos">
+              <img src="img/construccion10.jpg" alt="Imagen proyectos civiles">
               <div class="overlay">
                  <div class="content">
-                    <h5>Proyectos Eléctricos</h5>
+                    <h5>Proyectos Civiles</h5>
                     <p>Elaboración de proyectos para el sector público y privado.</p>
+                 </div>
+              </div>
+            </div>
+            <div class="item-md civil-02">
+              <img src="img/grua.jpg" alt="Imagen proyectos civiles">
+              <div class="overlay">
+                 <div class="content">
+                    <h5>Proyectos Civiles</h5>
+                    <p>Alquiler de máquinas, vehículos, maquinaria pesada</p>
+                 </div>
+              </div>
+            </div>
+            <div class="item-md civil-03">
+              <img src="img/construccion.jpg"   alt="Imagen proyectos civiles">
+              <div class="overlay">
+                 <div class="content">
+                    <h5>Proyectos Civiles</h5>
+                    <p>Proyectos y obras Civiles</p>
                  </div>
               </div>
             </div>
           </div>
           
           <div class="proyectos-electricos">
-            <div class="item-lg civil-01">
-              <img src="img/construccion10.jpg" alt="Imagen proyectos metalicos">
+            <div class="item-md electr-01">
+              <img src="img/electrico-2jpg.jpg" alt="Imagen proyectos eléctricos">
               <div class="overlay">
                  <div class="content">
-                    <h5>Proyectos Metálicos</h5>
-                    <p>Elaboración de proyectos para el sector público y privado.</p>
+                    <h5>Proyectos Eléctricos</h5>
+                    <p>Montaje de Subestaciones eléctricas</p>
+                 </div>
+              </div>
+            </div>
+            <div class="item-md electr-02">
+              <img src="img/electrico-4.jpg" alt="Imagen proyectos eléctricos">
+              <div class="overlay">
+                 <div class="content">
+                    <h5>Proyectos Eléctricos</h5>
+                    <p>Supervisión de obras eléctricas</p>
+                 </div>
+              </div>
+            </div>
+            <div class="item-lg electr-03">
+              <img src="img/electrico-1.jpg" alt="Imagen proyectos eléctricos">
+              <div class="overlay">
+                 <div class="content">
+                    <h5>Proyectos Eléctricos</h5>
+                    <p>Consultoría y asesoramiento en eficiencia energética</p>
                  </div>
               </div>
             </div>
           </div>
-
-          <div class="proyectos-renovables">
-            <div class="item-lg civil-01">
-              <img src="img/renovable.jpg" alt="Imagen proyectos renovables">
+          <div class="proyectos-electricos">
+            <div class="item-md electr-01">
+              <img src="img/electrico-2jpg.jpg" alt="Imagen proyectos eléctricos">
               <div class="overlay">
                  <div class="content">
-                    <h5>Proyectos Renovables</h5>
-                    <p>Elaboración de proyectos para el sector público y privado.</p>
+                    <h5>Proyectos Eléctricos</h5>
+                    <p>Montaje de Subestaciones eléctricas</p>
+                 </div>
+              </div>
+            </div>
+            <div class="item-md electr-02">
+              <img src="img/electrico-4.jpg" alt="Imagen proyectos eléctricos">
+              <div class="overlay">
+                 <div class="content">
+                    <h5>Proyectos Eléctricos</h5>
+                    <p>Supervisión de obras eléctricas</p>
+                 </div>
+              </div>
+            </div>
+            <div class="item-lg electr-03">
+              <img src="img/electrico-1.jpg" alt="Imagen proyectos eléctricos">
+              <div class="overlay">
+                 <div class="content">
+                    <h5>Proyectos Eléctricos</h5>
+                    <p>Consultoría y asesoramiento en eficiencia energética</p>
                  </div>
               </div>
             </div>
@@ -167,44 +214,10 @@
         </div>  
       </div>
     </section>
-    
-    <section id="Clientes">
-      <div class="container">
-        <h2>Clientes</h2>
-        <p>Algunos de nuestros clientes:</p>
-        <div class="row m-2">
-          <div class="col client">
-            <img src="img/clients/aceros.png" width="100%">
-          </div>
-          <div class="col client">
-            <img src="img/clients/cip.png" width="100%">
-          </div>
-          <div class="col client">
-            <img src="img/clients/cruz_del_sur.png" width="100%">
-          </div>
-          <div class="col client">
-            <img src="img/clients/cuatrogallos.png" width="100%">
-          </div>
-        </div>
-        <div class="row m-2">
-          <div class="col client">
-            <img src="img/clients/kr.png" width="100%">
-          </div>
-          <div class="col client">
-            <img src="img/clients/prodimin.png" width="100%">
-          </div>
-          <div class="col client">
-            <img src="img/clients/realplaza.png" width="100%">
-          </div>
-          <div class="col client">
-            <img src="img/clients/sunat.png" width="100%">
-          </div>
-        </div>
-    </section>
 
     <section id="Contacto">
       <div class="container">
-        <h3>Contáctanos</h3>
+        <h3>Solicita tu servicio</h3>
         <div>
           <form method="post" id="register-form" novalidate="novalidate">
             <p class="item-form">
